--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "list-files": "^1.1.4",
+    "markdown-react-js": "^1.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-markdown": "^5.0.3",
+    "react-modal": "^3.12.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-syntax-highlighter": "^15.4.3",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
