--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://anilkorkmaz.github.io/codebox",
+  "homepage":"https://anilkorkmaz.github.io/anilkorkmaz.github.io",
   "name": "AnilKorkmaz",
   "version": "1.0.0",
   "private": true,
